--- a/about.html
+++ b/about.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="stylesheet" href="./styles/modal.css" />
     <link rel="stylesheet" href="./styles/cart.css" />
+    <link rel="stylesheet" href="./styles/about.css" />
+
     <title>Rainy days | Home</title>
     <!-- Hotjar Tracking Code for https://silly-volhard-7894ac.netlify.app -->
     <script>
@@ -149,10 +151,11 @@
       </div>
     </header>
     <main>
-      <div class="main-content">
+      <div class="main-content-about">
         <h2>About Us</h2>
         <h3>How did we start?</h3>
         <img src="./images/man-sewing.jpg" alt="about us image" />
+        <div class="about-us-text">
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam odio
           nulla laudantium pariatur consequatur necessitatibus, expedita
@@ -166,6 +169,7 @@
           delectus a, tempore reiciendis earum quae repellendus quaerat
           similique quod, ea fugiat!
         </p>
+      </div>
       </div>
     </main>
     <footer>
