--- a/detailed-pages/man-black.html
+++ b/detailed-pages/man-black.html
@@ -33,7 +33,7 @@
     <header>
       <div>
         <div class="logo-section">
-          <a href="index.html">
+          <a href="../index.html">
             <img
               src="../images/rainy-days-logo.png"
               alt="Rainy Days Logo"
@@ -122,24 +122,6 @@
         <h1>Mens' Jackets</h1>
         <section class="main-content-shop details-page">
                 <div>
-  <!--                <div class="product-info">
-                    <div class="product-title">
-                      <h3>About this jacket</h3>
-                      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum, neque mollitia consequatur velit autem aliquam. Provident tenetur sit suscipit recusandae minus inventore animi similique eaque autem repellat! Illo, repellat labore?</p>
-                    </div>
-                    <div class="product-review">
-                      <h3>Customers reviews</h3><div class="stars">
-                        <ul>
-                          <li><img src="../images/star-icon.png" alt="star icon"></li>
-                          <li><img src="../images/star-icon.png" alt="star icon"></li>
-                          <li><img src="../images/star-icon.png" alt="star icon"></li>
-                          <li><img src="../images/star-icon.png" alt="star icon"></li>
-                          <li><img src="../images/star-icon.png" alt="star icon"></li>
-                        </ul>
-                      </div>
-                      <a href="https://no.trustpilot.com/">Read reviews >></a>
-                    </div>
-                  </div>   -->
                   <div class="product-image">
                     <div class="product-info-main-text">
                       <div class="product-title">
@@ -169,12 +151,7 @@
                     </div>
                     <div class="product-checkout-button">
                       <button class="cta" type="text" onclick="addToCart('Black Jacket for Men', 12, '../images/black-man.jpg', 200); snackbarFunction()">Add to Cart</button>                      
-    <!--                  <div class="overlay cart-overlay">
-                      <div class="overlay-inside cart">
-                          <h2>Your Cart</h2>
-                          <button class="cta cta-red" type="cta">Check Out</button>
-                        </div>
-                      </div>      -->
+
                     </div>
                   </div>
                   </div>
