--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <h1>OUR BEST DEALS</h1>
         </div>
         <div class="best-deals">
-        <div class="main-page">
+        <div class="main-page-index">
           <h1>Womens' Jackets</h1>
           <section class="main-content-shop">
             <div class="products">
@@ -176,7 +176,7 @@
                   </div>
                   </section>
                   </div>
-                  <div class="main-page">
+                  <div class="main-page-index">
                     <h1>Mens' Jackets</h1>
                     <section class="main-content-shop best-deals">
                       <div class="products">
@@ -193,7 +193,7 @@
                             </div>
                             </section>
                             </div>
-                    <div class="main-page">
+                    <div class="main-page-index">
                       <h1>Outlet Jackets</h1>
                       <section class="main-content-shop">
                         <div class="products">
